# UGMFGT_15_1_JWesting_P_Factor_Analyser

./: 20260427_UGMFGT_15_1_JWESTING_P_Factor_Analyser_Logbook.docx  CMakeLists.txt  Compute_Offset.c  Compute_Offset.h  Compute_P2P.c  Compute_P2P.h  Compute_RMS.c  Compute_RMS.h  Power_Log_Extraction.h  Power_Log_StructDef.h  README.md  io.c  io.h  main.c  power_quality_log.csv
IO_And_Logs/: Power_Log_Extractor.c  Power_Log_Extractor.h  io.c  io.h
Waveform_Analysis/: Compute_Offset.c  Compute_Offset.h  Compute_P2P.c  Compute_P2P.h  Compute_RMS.c  Compute_RMS.h  clip_detection.c  clip_detection.h
